fix problem z-index of modal auto-logout

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -295,12 +295,8 @@ th.required:after {
     transition: all 0.3s ease;
 }
 
-.position-fixed {
+.z-index-9999 {
     z-index: 9999;
-}
-
-.z-index-1000 {
-    z-index: 1000;
 }
 
 .msg-content {
